# astro

./: Cargo.toml  Makefile  README.md  astro_implementation.md  buf.gen.yaml  goal.md
.github/workflows/: claude-code-review.yml
crates/application/: Cargo.toml
crates/application/src/: abci_executor.rs  actor.rs  block_result.rs  engine.rs  genesis.rs  ingress.rs  lib.rs  propose.rs  supervisor.rs  utils.rs
crates/astro-proto-types/: Cargo.toml  README.md
crates/astro-proto-types/src/: lib.rs
crates/astro-proto-types/src/codegen/: cometbft.abci.v1.rs  cometbft.abci.v2.rs  cometbft.abci.v2.tonic.rs  cometbft.blocksync.v2.rs  cometbft.consensus.v2.rs  cometbft.crypto.v1.rs  cometbft.mempool.v2.rs  cometbft.privval.v2.rs  cometbft.rpc.grpc.v1beta1.rs  cometbft.services.block.v2.rs  cometbft.services.block.v2.tonic.rs  cometbft.services.block_results.v2.rs  cometbft.services.block_results.v2.tonic.rs  cometbft.state.v1.rs  cometbft.state.v2.rs  cometbft.types.v2.rs  mod.rs
crates/types/: Cargo.toml
crates/types/src/: block.rs  consensus.rs  genesis.rs  lib.rs
simapp/: Dockerfile.proto  Makefile  app.go  buf.gen.yaml  buf.work.yaml  go.mod  go.sum  upgrades.go
simapp/app/: app.go  export.go
simapp/proto/: buf.yaml
simapp/proto/astro/astro/v1/: genesis.proto  params.proto  query.proto  tx.proto
simapp/x/astro/: astro.go
simapp/x/astro/keeper/: genesis.go  keeper.go
simapp/x/astro/module/: module.go
simapp/x/astro/types/: codec.go  errors.go  genesis.go  genesis.pb.go  genesis_ext.go  keys.go  params.go  params.pb.go  params_ext.go  query.pb.go  query_grpc.pb.go  tx.pb.go  tx_grpc.pb.go
