[workspace]
resolver = "3"
members = ["crates/types", "crates/astro-proto-types", "crates/application"]

[workspace.package]
license = "Apache-2.0"
repository = "https://github.com/01builders/astro"
rust-version = "1.86.0"


[workspace.dependencies]
astro-types = { path = "./crates/types"}

commonware-consensus = "0.0.58"
commonware-cryptography = "0.0.58"
commonware-codec = "0.0.58"
commonware-utils = "0.0.58"

bytes = "1.10.1"
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.2"
