[workspace]
resolver = "3"
members = ["crates/types", "crates/astro-proto-types", "crates/application"]

[workspace.package]
license = "Apache-2.0"
repository = "https://github.com/01builders/astro"
rust-version = "1.86.0"


[workspace.dependencies]
astro-types = { path = "crates/types"}
astro-proto-types = { path = "crates/astro-proto-types"}

commonware-consensus = "0.0.58"
commonware-cryptography = "0.0.58"
commonware-codec = "0.0.58"
commonware-macros = "0.0.58"
commonware-resolver = "0.0.58"
commonware-runtime = "0.0.58"
commonware-utils = "0.0.58"
commonware-broadcast = "0.0.58"
commonware-p2p = "0.0.58"

bytes = "1.10.1"
futures = "0.3.31"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.2"
tracing = "0.1.41"
prost = "0.13.3"
tonic = "0.12.3"
prost-types = { version = "0.13.3", features = ["std"] }
thiserror = "2.0.16"
governor = "0.6.3"
tokio = { version = "1.0", features = ["full"] }
rand_core = "0.6"
