[package]
name = "astro-application"
version = "0.1.0"
edition = "2024"
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
astro-types.workspace = true

commonware-consensus.workspace = true
commonware-cryptography.workspace = true

futures.workspace = true
