[package]
name = "astro-application"
version = "0.1.0"
edition = "2024"
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
astro-types.workspace = true
astro-proto-types.workspace = true

commonware-codec.workspace = true
commonware-resolver.workspace = true
commonware-consensus.workspace = true
commonware-cryptography.workspace = true
commonware-macros.workspace = true
commonware-utils.workspace = true
commonware-runtime.workspace = true

prost-types.workspace = true
futures.workspace = true
rand.workspace = true
tracing.workspace = true
tonic.workspace = true
thiserror.workspace = true